@@ -58,7 +58,7 @@ TEST(Versions, ZlibStatic)
 
 TEST(Versions, BoostStatic)
 {
-  ASSERT_STREQ("1_54", BOOST_LIB_VERSION);
+  ASSERT_STREQ("1_55", BOOST_LIB_VERSION);
 }
 
 TEST(Versions, CurlStatic)
